[UPDATE] Added two-factor authorization in app
